--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Ti.Meow provides the ability to write code snippets in a browser and render the 
 
 本專案參考自 [dbankier/TiShadow](https://github.com/dbankier/TiShadow) 。目前版本功能僅提供瀏覽器鍵入程式片段傳送至包含 Ti.Meow Module 的 [Titanium Mobile](http://www.appcelerator.com/) app 之 Android 或 iOS 手持裝置做即時預覽。
 
-製作原則僅為學習使用 Node.js，在不採用任何外掛模組下，也撇除因 Android 瀏覽器版本不支援 HTML5 WebSocket，故採用 long pulling 方式進行即時更新。
+製作原則僅為學習使用 Node.js，在不採用任何 open source 外掛模組下，也撇除因 Android 瀏覽器版本不支援 HTML5 WebSocket，故採用基本連線方式進行即時更新。
 
 ![ti.meow test](https://lh4.googleusercontent.com/-3bgZbgbpWzg/T4gFQ5pMm-I/AAAAAAAABQg/UT89Q4Rrntg/s288/ti.meow-1.jpg)
 
